Spring: Replace xml config files with Java config code and upgrade to spring security 4.1.5
Replaces the web.xml, jamwiki-servlet.xml and applicationContext-security.xml files.